--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,3 +2,14 @@ url: ~
 template:
   bootstrap: 5
   bootswatch: yeti
+navbar:
+  components:
+    articles:
+      text: Articles
+      menu:
+      - text: Introduction to CombineDistributions
+        href: articles/intro-vignette.html
+      - text: Aggregating predictions from an SIRS model
+        href: articles/SIRS-vignette.html
+      - text: Aggregation and trimming on real-world COVID-19 death predictions
+        href: articles/MMODS-vignette.html
