--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,14 @@ Package: CombineDistributions
 Title: What the Package Does (One Line, Title Case)
 Version: 0.2.0
 Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+    c(person(given = "Emily",
+             family = "Howerton",
+             role = c("aut", "cre"),
+             comment = c(ORCID = "0000-0002-0639-3728")),
+      person(given = "Michelle",
+             family = "Qin",
+             comment = c(role = "Created this website for class demo",
+                         ORCID = "0000-0003-0391-6527")))
 Description: What the package does (one paragraph).
 License: `use_mit_license()`, `use_gpl3_license()` or friends to
     pick a license
