--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: CombineDistributions
-Title: What the Package Does (One Line, Title Case)
+Title: Combine probabilistic predictions by averaging probabilities or quantiles
 Version: 0.2.0
 Authors@R: 
     c(person(given = "Emily",
