--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,7 @@ Authors@R:
              comment = c(role = "Created this website for class demo",
                          ORCID = "0000-0003-0391-6527")))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+License: CC-BY-NC (http://creativecommons.org/licenses/by-nc/3.0/)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
