--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,11 @@ Authors@R:
     c(person(given = "Emily",
              family = "Howerton",
              role = c("aut", "cre"),
+             email = "eah394@psu.edu",
              comment = c(ORCID = "0000-0002-0639-3728")),
       person(given = "Michelle",
              family = "Qin",
+             email = "mqin8@jh.edu",
              comment = c(role = "Created this website for class demo",
                          ORCID = "0000-0003-0391-6527")))
 Description: 
@@ -15,7 +17,7 @@ License: CC-BY-NC (http://creativecommons.org/licenses/by-nc/3.0/)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.3
 Suggests: 
     cowplot,
     doParallel,
