Add Description to DESCRIPTION
Taken from README of original package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Authors@R:
              email = "mqin8@jh.edu",
              comment = c(role = "Created this website for class demo",
                          ORCID = "0000-0003-0391-6527")))
-Description: 
+Description: This package implements multiple methods for combining probabilistic predictions, including probability and quantile averaging, i.e.,   Linear Opinion Pool (Stone 1961) and Vincent average (Vincent 1912, Ratcliff 1979) respectively, as well as non-equal weighting, including trimming methods (Jose 2014).
 License: CC-BY-NC (http://creativecommons.org/licenses/by-nc/3.0/)
 Encoding: UTF-8
 LazyData: true
